# CluBox4PDP

./: README.md
CSVFlowSimu/: main.c
CSVFlowSimu/clubox/: clubox.c  clubox.h  stack.h
CSVFlowSimu/data/: clean_samples.py
CSVFlowSimu/data/data_original/: heads_space_delete.py
CSVFlowSimu/data/result/: draw_label_points.py  purity.py
CSVFlowSimu/data/result/cm/: draw_cm.py
CSVFlowSimu/simu/: simu.c  simu.h
CluBox4PDP/: box_classifier.c  box_classifier.h  calc_drop_reject.py  clubox.c  clubox.h  compare_baselines.py  dissectors.c  dissectors.h  gen_benign_pcap.py  gen_ddos_pcap.py  main.c  meson.build  meson_options.txt  plot_flow_comparison.py  plot_linerate_main.py  plot_throughput_clubox.py  pseudo_flow.c  pseudo_flow.h  stack.h  train_classifier.py
